--- a/test/rma.css
+++ b/test/rma.css
@@ -90,10 +90,6 @@
     }
 }
 
-body[data-type="article"] nav[data-type="toc"] {
-    display: none;
-}
-
 @page {
     size: A4;
 
@@ -102,7 +98,7 @@ body[data-type="article"] nav[data-type="toc"] {
     }
 }
 
-@page:first {
+@page :first {
     border-bottom: none;
     @bottom-left { content: none }
     @bottom-right { content: none }
@@ -406,7 +402,7 @@ div.pagedjs_footnote_content {
     padding-top: 3px;
 }
 
-div.pagedjs_footnote_content:before {
+div.pagedjs_footnote_content::before {
     display: block;
     position: absolute;
     left: 0;
@@ -423,7 +419,6 @@ div.pagedjs_footnote_content:before {
 
 math {
     font-family: "Minion Math", "STIX Two Math", "OldStandard-Math", "Noto Sans Math", "Cambria Math", "Nagwa TK Math", "TeX Gyre Schola Math", "Libertinus Math", "Minion Math", "GFS Neohellenic Math";
-
 }
 
 math[display="block"] {
@@ -451,7 +446,6 @@ h4,
 h5,
 h6 {
     font-style: italic;
-    font-display: 
     font-weight: 600;
 }
 
@@ -460,21 +454,22 @@ section {
     widows: 3;
 }
 
-section[data-type="chapter"]:first-of-type {
-    counter-reset: page 1;
-}
-
 section[data-type="chapter"] {
     page: Chapter;
-    page-break-before: right;
     counter-increment: chapternumber;
+    page-break-before: right;
     counter-reset: sect1number equationnumber figurenumber;
+}
+
+section[data-type="chapter"]:first-of-type {
+    counter-reset: page 1;
 }
 
 section[data-type="chapter"]>h1 {
     string-set: chaptertitle content();
     font-size: 24pt;
     font-variant: small-caps;
+    page-break-before: right;
     text-align: center;
     margin-bottom: 150px;
     line-height: 125%;
@@ -746,7 +741,6 @@ div[data-type="example"]>p:first-of-type,
 div[data-type="exercise"]>p:first-of-type,
 div[data-type="proof"]>p:first-of-type,
 div[data-type="template"]>p:first-of-type {
-    /*margin-top: 3px;*/
     display: inline-block;
     margin: 0;
 }
