--- a/test/rma.css
+++ b/test/rma.css
@@ -136,7 +136,7 @@
     margin-right: 3cm;
 }
 
-@page Chapter:left {
+@page Main:left {
 
     @bottom-left {
         font-size: 9pt;
@@ -166,7 +166,7 @@
     }
 }
 
-@page Chapter:right {
+@page Main:right {
 
     @bottom-left {
         font-size: 9pt;
@@ -196,7 +196,7 @@
     }
 }
 
-@page Chapter:first {
+@page Main:first {
     @bottom-center {
         font-size: 9pt;
         content: counter(page);
@@ -217,7 +217,7 @@
     }
 }
 
-@page Nav:left {
+@page Front:left {
     @bottom-left {
         font-size: 9pt;
         content: counter(page, lower-roman);
@@ -244,7 +244,7 @@
     }
 }
 
-@page Nav:right {
+@page Front:right {
     @bottom-right {
         font-size: 9pt;
         content: counter(page, lower-roman);
@@ -271,7 +271,7 @@
     }
 }
 
-@page Nav:first {
+@page Front:first {
     @bottom-center {
         font-size: 9pt;
         content: counter(page, lower-roman);
@@ -336,18 +336,22 @@ p[data-type="author"] {
     min-width: 100%;
 }
 
-nav {
-    page: Nav;
+nav, section[data-type="preface"] {
+    page: Front;
     page-break-before: right;
-    counter-reset: page 1;
 }
 
-nav>h1 {
+nav>h1, section[data-type="preface"]>h1 {
     font-size: 24pt;
     font-variant: small-caps;
     text-align: center;
     margin-bottom: 150px;
     line-height: 125%;
+}
+
+section[data-type="preface"] section[data-type="sect1"]>h1:before {
+    content: counter(sect1number);
+    margin-right: 12px
 }
 
 a {
@@ -462,7 +466,7 @@ section {
 }
 
 section[data-type="chapter"] {
-    page: Chapter;
+    page: Main;
     counter-increment: chapternumber;
     page-break-before: right;
     counter-reset: sect1number equationnumber figurenumber;
