--- a/test/rma.css
+++ b/test/rma.css
@@ -331,7 +331,7 @@ p[data-type="year"] {
     font-size: 36pt;
     text-align: center;
     position: absolute;
-    bottom: 40px;
+    bottom: 20px;
     min-width: 100%;
 }
 
@@ -406,7 +406,7 @@ nav>ol {
 
 nav>ol>li::before {
     font-size: 11pt;
-    font-weight: 500;
+    font-weight: 600;
     content: counter(navnumber) ".";
     position: absolute;
     display: block;
@@ -416,7 +416,7 @@ nav>ol>li::before {
 nav>ol>li {
     margin-bottom: 10px;
     font-size: 11pt;
-    font-weight: 500;
+    font-weight: 600;
     list-style: none;
     counter-increment: navnumber;
 }
@@ -428,7 +428,7 @@ nav>ol>li>ol {
 
 nav>ol>li>ol>li {
     font-size: 10pt;
-    font-weight: normal;
+    font-weight: 400;
     list-style: none;
 }
 
@@ -463,7 +463,7 @@ div.pagedjs_footnote_content::before {
 }
 
 math {
-    font-family: "Lete Sans Math"/*, "Lato Math", "IBMPlexMath", "Fira Math", "Minion Math", "OldStandard-Math", "STIX Two Math", "Noto Sans Math", "Cambria Math", "Nagwa TK Math", "TeX Gyre Schola Math", "Libertinus Math", "GFS Neohellenic Math";*/
+    font-family: "STIX Two Math"/*, "Lete Sans Math"/*, "Pennstander Math", "Fira Math", "Lato Math", "IBMPlexMath", "Minion Math", "OldStandard-Math", "STIX Two Math", "Noto Sans Math", "Cambria Math", "Nagwa TK Math", "TeX Gyre Schola Math", "Libertinus Math", "GFS Neohellenic Math";*/
 }
 
 math[display="block"] {
@@ -481,11 +481,11 @@ svg math {
 body {
     hyphens: auto;
     font-variant-ligatures: common-ligatures no-discretionary-ligatures no-historical-ligatures;
-    font-family: "Lato"/*, "IBMPlexSerif", "Fira Sans Condensed", "Minion Pro", "Old Standard", "STIX Two Text", "Noto Sans SemiCondensed", "Cambria", "Nagwa TK Text", "TeX Gyre Schola", "Libertinus Serif", "GFS Neohellenic"*/;
+    font-family: "STIX Two Text"/*, "Lato", "Pennstander", "Fira Sans Condensed", "IBMPlexSerif", "Minion Pro", "Old Standard", "STIX Two Text", "Noto Sans SemiCondensed", "Cambria", "Nagwa TK Text", "TeX Gyre Schola", "Libertinus Serif", "GFS Neohellenic"*/;
     font-size: 10pt;
-    font-weight: normal;
+    font-weight: 400;
     counter-reset: chapternumber theoremnumber definitionnumber axiomnumber templatenumber;
-    line-height: 140%;
+    /*line-height: 125%;*/
 }
 
 h1,
@@ -495,7 +495,7 @@ h4,
 h5,
 h6 {
     font-style: italic;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 section {
@@ -669,7 +669,7 @@ div[data-type="example"]>h1,
 div[data-type="exercise"]>h1,
 div[data-type="proof"]>h1,
 div[data-type="template"]>h1 {
-    font-weight: 500;
+    font-weight: 600;
     font-style: normal;
     margin: 0;
     margin-right: 6px;
@@ -738,7 +738,6 @@ div[data-type="corollary"] {
     counter-increment: theoremnumber;
     background-color: hsla(189, 100%, 50%, 10%);
     border-left-color: hsla(189, 100%, 50%, 80%);
-    font-size: 10pt;
     font-style: italic;
 }
 
@@ -746,39 +745,33 @@ div[data-type="definition"] {
     counter-increment: definitionnumber;
     background-color: hsla(180, 100%, 25%, 10%);
     border-left-color: hsla(180, 100%, 25%, 80%);
-    font-size: 10pt;
 }
 
 div[data-type="axiom"] {
     counter-increment: axiomnumber;
     background-color: hsla(300, 100%, 25%, 10%);
     border-left-color: hsla(300, 100%, 25%, 80%);
-    font-size: 10pt;
 }
 
 div[data-type="example"] {
     background-color: hsla(39, 100%, 50%, 10%);
     border-left-color: hsla(39, 100%, 50%, 80%);
-    font-size: 10pt;
 }
 
 div[data-type="exercise"] {
     background-color: hsla(60, 100%, 50%, 10%);
     border-left-color: hsla(60, 100%, 50%, 80%);
-    font-size: 10pt;
 }
 
 div[data-type="proof"] {
     background-color: hsla(0, 100%, 0%, 10%);
     border-left-color: hsla(0, 100%, 0%, 80%);
-    font-size: 10pt;
 }
 
 div[data-type="template"] {
     counter-increment: templatenumber;
     background-color: hsla(300, 76%, 72%, 10%);
     border-left-color: hsla(300, 76%, 72%, 80%);
-    font-size: 10pt;
 }
 
 div[data-type="theorem"]>p:first-of-type,
@@ -875,7 +868,7 @@ tr {
 }
 
 thead {
-    font-weight: 500;
+    font-weight: 600;
     text-align: left;
     margin-top: 0;
     border-top: 0.5px solid black;
